--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		const verbose = false;
 	</script>
 	<script src="beats.js" type="text/javascript"></script>
-	<script src="mathjs-rythm.class.js" type="text/javascript"></script>
+	<script src="claves-ritmicas.class.js" type="text/javascript"></script>
 	<script src="cr.js" type="text/javascript"></script>
 	<script>
 		document.addEventListener('DOMContentLoaded', function() {
