--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	</script>
 	<script src="beats.js" type="text/javascript"></script>
 	<script src="claves-ritmicas.class.js" type="text/javascript"></script>
-	<script src="cr.js" type="text/javascript"></script>
+	<script src="cr-demo.js" type="text/javascript"></script>
 	<script>
 		document.addEventListener('DOMContentLoaded', function() {
 			setTimeout(function() {
