--- a/index.html
+++ b/index.html
@@ -1,9 +1,48 @@
 <!DOCTYPE html>
 <html lang="es-MX">
 <head>
-	<meta charset=utf-8 />
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cifrado de Claves Rítmicas</title>
+	<!-- Search Engine -->
+	<meta name="description" content="Una clave rítmica es una pequeña frase o motivo rítmico mínimo que solo toma en cuenta la secuencia de golpes y no las alturas o los timbres. Se representa mediante una secuencia de números donde cada número indica la duración entre golpes sucesivos.">
+	<meta name="image" content="https://sanxofon.github.io/cr/share.jpg">
+	<meta name="author" content="Santiago Chávez Novaro">
+	<meta name="robots" content="index, follow">
+	<title>Claves Rítmicas v1</title>
+	<meta name="theme-color" content="#eeeeee" />
+	<!-- Allow web app to be run in full-screen mode. -->
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="application-name" content="Claves Rítmicas">
+	<meta name="apple-mobile-web-app-title" content="Claves Rítmicas">
+	<meta name="apple-mobile-web-app-status-bar-style" content="white">
+	<link rel="apple-touch-icon" href="https://sanxofon.github.io/cr/logo.png">
+	<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+	<meta name="og:title" content="Claves Rítmicas v1">
+	<meta name="og:description" content="Una clave rítmica es una pequeña frase o motivo rítmico mínimo que solo toma en cuenta la secuencia de golpes y no las alturas o los timbres. Se representa mediante una secuencia de números donde cada número indica la duración entre golpes sucesivos.">
+	<meta name="og:image" content="https://sanxofon.github.io/cr/share.jpg">
+	<meta name="og:url" content="https://sanxofon.github.io/cr/">
+	<meta name="og:site_name" content="Claves Rítmicas">
+	<meta name="og:locale" content="es_MX">
+	<meta name="og:type" content="app">
+	<meta name="website:author" content="Santiago Chávez Novaro">
+	<!-- Schema.org for Google -->
+	<meta itemprop="name" content="Claves Rítmicas">
+	<meta itemprop="description" content="Una clave rítmica es una pequeña frase o motivo rítmico mínimo que solo toma en cuenta la secuencia de golpes y no las alturas o los timbres. Se representa mediante una secuencia de números donde cada número indica la duración entre golpes sucesivos.">
+	<meta itemprop="image" content="https://sanxofon.github.io/cr/share.jpg">
+	<!-- Twitter -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Claves Rítmicas">
+	<meta name="twitter:description" content="Una clave rítmica es una pequeña frase o motivo rítmico mínimo que solo toma en cuenta la secuencia de golpes y no las alturas o los timbres. Se representa mediante una secuencia de números donde cada número indica la duración entre golpes sucesivos.">
+	<meta name="twitter:site" content="@sanxofon">
+	<meta name="twitter:creator" content="@sanxofon">
+	<meta name="twitter:image:src" content="https://sanxofon.github.io/cr/share.jpg">
+	<!-- Disable automatic phone number detection. -->
+	<meta name="format-detection" content="telephone=no">
+	<!-- FAVICON -->
+	<link rel="shortcut icon" href="https://sanxofon.github.io/cr/logo.png" type="image/png">
+	<link rel="icon" href="https://sanxofon.github.io/cr/logo.png" type="image/png">
+
 	<!-- <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Display|Lato&display=swap" rel="stylesheet">  -->
 	<link href="style.css" rel="stylesheet">
 	<!-- Audio Howler.js library -->
