--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 		<canvas id="circle" width="360" height="360"></canvas>
 	</div>
 	<div class="centro">
+		<div class="titulo">Claves Rítmicas</div>
 		<div>
 			<div class="inputLine1">
 				<input title="Ver Claves" class="escalar" type="checkbox" id="addClavesOperacion" name="addClavesOperacion" value="1" onchange="window.addClavesOperacion = this.checked; saveCheckboxState(this.id, this.checked); go();"><input title="Ingrese Claves y Operaciones" type="text" id="clave" placeholder="CLAVES" onchange="go();"><button class="toggle" onclick="go();">✔</button></div>
