Versión 1.9 (Release Candidate)

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 				<button onclick="openClaves();" title="Abrir Claves Guardadas">📂</button>
 				<button onclick="importClaves();" title="Importar archivo JSON de Claves">📥</button>
 				<button onclick="exportClaves();" title="Exportar archivo JSON de Claves">📦</button>
+				<button onclick="printClaves();" title="Imprimir lista de claves">📇</button>
+				
 				<button onclick="clearClaves();" title="Vaciar Memoria de Claves">🧻</button>
 			</div>
 		</div>
@@ -103,5 +105,7 @@
 	<script src="cr-demo.js" type="text/javascript"></script>
 	<!-- Memoria Add On JS -->
 	<script src="cr-memoria.js" type="text/javascript"></script>
+	<!-- Drawing claves special -->
+	<script src="cr-draw.js" type="text/javascript"></script>
 </body>
 </html>
