--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Search Engine -->
 	<meta name="description" content="Una clave rítmica es una pequeña frase o motivo rítmico mínimo que solo toma en cuenta la secuencia de golpes y no las alturas o los timbres. Se representa mediante una secuencia de números donde cada número indica la duración entre golpes sucesivos.">
-	<meta name="image" content="https://sanxofon.github.io/cr/share.jpg">
+	<meta name="image" content="https://lengua.la/cr/share.jpg">
 	<meta name="author" content="Santiago Chávez Novaro">
 	<meta name="robots" content="index, follow">
-	<title>Claves Rítmicas v1</title>
+	<link rel="manifest" href="/cr/manifest.webmanifest">
+	<title>Claves Rítmicas v2</title>
 	<meta name="theme-color" content="#eeeeee" />
 	<!-- Allow web app to be run in full-screen mode. -->
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -16,12 +17,12 @@
 	<meta name="application-name" content="Claves Rítmicas">
 	<meta name="apple-mobile-web-app-title" content="Claves Rítmicas">
 	<meta name="apple-mobile-web-app-status-bar-style" content="white">
-	<link rel="apple-touch-icon" href="https://sanxofon.github.io/cr/logo.png">
+	<link rel="apple-touch-icon" href="https://lengua.la/cr/logo.png">
 	<!-- Open Graph general (Facebook, Pinterest & Google+) -->
-	<meta name="og:title" content="Claves Rítmicas v1">
+	<meta name="og:title" content="Claves Rítmicas v2">
 	<meta name="og:description" content="Una clave rítmica es una pequeña frase o motivo rítmico mínimo que solo toma en cuenta la secuencia de golpes y no las alturas o los timbres. Se representa mediante una secuencia de números donde cada número indica la duración entre golpes sucesivos.">
-	<meta name="og:image" content="https://sanxofon.github.io/cr/share.jpg">
-	<meta name="og:url" content="https://sanxofon.github.io/cr/">
+	<meta name="og:image" content="https://lengua.la/cr/share.jpg">
+	<meta name="og:url" content="https://lengua.la/cr/">
 	<meta name="og:site_name" content="Claves Rítmicas">
 	<meta name="og:locale" content="es_MX">
 	<meta name="og:type" content="app">
@@ -29,19 +30,19 @@
 	<!-- Schema.org for Google -->
 	<meta itemprop="name" content="Claves Rítmicas">
 	<meta itemprop="description" content="Una clave rítmica es una pequeña frase o motivo rítmico mínimo que solo toma en cuenta la secuencia de golpes y no las alturas o los timbres. Se representa mediante una secuencia de números donde cada número indica la duración entre golpes sucesivos.">
-	<meta itemprop="image" content="https://sanxofon.github.io/cr/share.jpg">
+	<meta itemprop="image" content="https://lengua.la/cr/share.jpg">
 	<!-- Twitter -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:title" content="Claves Rítmicas">
 	<meta name="twitter:description" content="Una clave rítmica es una pequeña frase o motivo rítmico mínimo que solo toma en cuenta la secuencia de golpes y no las alturas o los timbres. Se representa mediante una secuencia de números donde cada número indica la duración entre golpes sucesivos.">
 	<meta name="twitter:site" content="@sanxofon">
 	<meta name="twitter:creator" content="@sanxofon">
-	<meta name="twitter:image:src" content="https://sanxofon.github.io/cr/share.jpg">
+	<meta name="twitter:image:src" content="https://lengua.la/cr/share.jpg">
 	<!-- Disable automatic phone number detection. -->
 	<meta name="format-detection" content="telephone=no">
 	<!-- FAVICON -->
-	<link rel="shortcut icon" href="https://sanxofon.github.io/cr/logo.png" type="image/png">
-	<link rel="icon" href="https://sanxofon.github.io/cr/logo.png" type="image/png">
+	<link rel="shortcut icon" href="https://lengua.la/cr/logo.png" type="image/png">
+	<link rel="icon" href="https://lengua.la/cr/logo.png" type="image/png">
 
 	<!-- CSS -->
 	<link href="cr-style.css" rel="stylesheet">
@@ -56,9 +57,9 @@
 		<div class="titulo">Claves Rítmicas</div>
 		<div>
 			<div class="inputLine1">
-				<input title="Ver Claves" class="escalar" type="checkbox" id="addClavesOperacion" name="addClavesOperacion" value="1" onchange="window.addClavesOperacion = this.checked; saveCheckboxState(this.id, this.checked); go();"><input title="Ingrese Claves y Operaciones" type="text" id="clave" placeholder="CLAVES" oninput="go();"><button class="toggle" onclick="go();">✔</button></div>
+				<input title="Ver Claves" class="escalar" type="checkbox" id="addClavesOperacion" name="addClavesOperacion" value="1" onchange="window.addClavesOperacion = this.checked; saveCheckboxState(this.id, this.checked); go();"><input title="Ingrese Claves y Operaciones" type="text" id="clave" placeholder="CLAVES" onchange="go();"><button class="toggle round-right" onclick="go();">✔</button></div>
 			<div class="inputLine">
-				<input title="Ver Resultado" class="escalar" type="checkbox" id="addClaveResultado" name="addClaveResultado" value="1" onchange="window.addClaveResultado = this.checked; saveCheckboxState(this.id, this.checked); go();"><button onclick="rotateClaveResult(-1);" title="Move Left" class="toggli">&lAarr;</button><button onclick="rotateClaveResult(1);" title="Move Right" class="toggln">&rAarr;</button><input title="Clave resultado" type="text" id="claveResult" placeholder="RESULTADO" readonly="readonly"><input title="Clave resultado expandida" type="text" id="claveExpand" value="" readonly="readonly" style="display:none;"><button onclick="toggleInputVisibility();" title="Toggle view" class="toggle">_</button>
+				<input title="Ver Resultado" class="escalar" type="checkbox" id="addClaveResultado" name="addClaveResultado" value="1" onchange="window.addClaveResultado = this.checked; saveCheckboxState(this.id, this.checked); go();"><input title="Clave resultado" type="text" id="claveResult" placeholder="RESULTADO" readonly="readonly"><input title="Clave resultado expandida" type="text" id="claveExpand" value="" readonly="readonly" style="display:none;"><button onclick="toggleInputVisibility();" title="Toggle view" class="toggle">_</button><button onclick="rotateClaveResult(-1);" title="Move Left" class="toggli">&lAarr;</button><button onclick="rotateClaveResult(1);" title="Move Right" class="toggln round-right">&rAarr;</button>
 			</div>
 			<div class="inputLine">
 				<button id="playButton" class="playButton" onclick="togglePlay();">▶</button>
@@ -76,11 +77,13 @@
 				<label for="inptLightDark">Claroscuro</label>
 			</div>
 			<div class="botones-memoria">
+				<button onclick="shareClave();" title="Compartir Clave Actual">🔗</button>
 				<button onclick="saveClave();" title="Guardar Clave">💾</button>
 				<button onclick="openClaves();" title="Abrir Claves Guardadas">📂</button>
 				<button onclick="importClaves();" title="Importar archivo JSON de Claves">📥</button>
 				<button onclick="exportClaves();" title="Exportar archivo JSON de Claves">📦</button>
 				<button onclick="printClaves();" title="Imprimir lista de claves">📇</button>
+				
 				
 				<button onclick="clearClaves();" title="Vaciar Memoria de Claves">🧻</button>
 			</div>
@@ -94,9 +97,23 @@
 	<script>
 		// Ver detalles de cada operación en la consola
 		const verbose = false;
+		// Este código verifica si la API del service worker está disponible. Si está disponible, se registra el service worker de /cr/sw.js una vez que se carga la página.
+		if ('serviceWorker' in navigator) {
+			window.addEventListener('load', function() {
+				navigator.serviceWorker.register('/cr/sw.js').then(function(registration) {
+				// Registration was successful
+				console.log('ServiceWorker registrado exitosamente en: ', registration.scope);
+				}, function(err) {
+				// registration failed :(
+				console.log('Error en el registro del ServiceWorker: ', err);
+				});
+			});
+		}
 	</script>
 	<!-- Audio Howler.js library -->
 	<script src="howler.min.js" type="text/javascript"></script>
+	<!-- QR Code library -->
+	<script type="text/javascript" src="qrcode.min.js"></script>
 	<!-- Beats sounds in Base64 -->
 	<script src="beats.js" type="text/javascript"></script>
 	<!-- Main Rhythmic Claves Class -->
