Versión 2.53 - Cambio de dominio general (abandonando lengua.la?)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Search Engine -->
 	<meta name="description" content="Una clave rítmica es una pequeña frase o motivo rítmico mínimo que solo toma en cuenta la secuencia de golpes y no las alturas o los timbres. Se representa mediante una secuencia de números donde cada número indica la duración entre golpes sucesivos.">
-	<meta name="image" content="https://lengua.la/cr/share.jpg">
+	<meta name="image" content="https://sanxofon.github.io/cr/share.jpg">
 	<meta name="author" content="Santiago Chávez Novaro">
 	<meta name="robots" content="index, follow">
 	<link rel="manifest" href="/cr/manifest.webmanifest">
@@ -17,12 +17,12 @@
 	<meta name="application-name" content="Claves Rítmicas">
 	<meta name="apple-mobile-web-app-title" content="Claves Rítmicas">
 	<meta name="apple-mobile-web-app-status-bar-style" content="white">
-	<link rel="apple-touch-icon" href="https://lengua.la/cr/logo.png">
+	<link rel="apple-touch-icon" href="https://sanxofon.github.io/cr/logo.png">
 	<!-- Open Graph general (Facebook, Pinterest & Google+) -->
 	<meta name="og:title" content="Claves Rítmicas v2">
 	<meta name="og:description" content="Una clave rítmica es una pequeña frase o motivo rítmico mínimo que solo toma en cuenta la secuencia de golpes y no las alturas o los timbres. Se representa mediante una secuencia de números donde cada número indica la duración entre golpes sucesivos.">
-	<meta name="og:image" content="https://lengua.la/cr/share.jpg">
-	<meta name="og:url" content="https://lengua.la/cr/">
+	<meta name="og:image" content="https://sanxofon.github.io/cr/share.jpg">
+	<meta name="og:url" content="https://sanxofon.github.io/cr/">
 	<meta name="og:site_name" content="Claves Rítmicas">
 	<meta name="og:locale" content="es_MX">
 	<meta name="og:type" content="app">
@@ -30,19 +30,19 @@
 	<!-- Schema.org for Google -->
 	<meta itemprop="name" content="Claves Rítmicas">
 	<meta itemprop="description" content="Una clave rítmica es una pequeña frase o motivo rítmico mínimo que solo toma en cuenta la secuencia de golpes y no las alturas o los timbres. Se representa mediante una secuencia de números donde cada número indica la duración entre golpes sucesivos.">
-	<meta itemprop="image" content="https://lengua.la/cr/share.jpg">
+	<meta itemprop="image" content="https://sanxofon.github.io/cr/share.jpg">
 	<!-- Twitter -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:title" content="Claves Rítmicas">
 	<meta name="twitter:description" content="Una clave rítmica es una pequeña frase o motivo rítmico mínimo que solo toma en cuenta la secuencia de golpes y no las alturas o los timbres. Se representa mediante una secuencia de números donde cada número indica la duración entre golpes sucesivos.">
 	<meta name="twitter:site" content="@sanxofon">
 	<meta name="twitter:creator" content="@sanxofon">
-	<meta name="twitter:image:src" content="https://lengua.la/cr/share.jpg">
+	<meta name="twitter:image:src" content="https://sanxofon.github.io/cr/share.jpg">
 	<!-- Disable automatic phone number detection. -->
 	<meta name="format-detection" content="telephone=no">
 	<!-- FAVICON -->
-	<link rel="shortcut icon" href="https://lengua.la/cr/logo.png" type="image/png">
-	<link rel="icon" href="https://lengua.la/cr/logo.png" type="image/png">
+	<link rel="shortcut icon" href="https://sanxofon.github.io/cr/logo.png" type="image/png">
+	<link rel="icon" href="https://sanxofon.github.io/cr/logo.png" type="image/png">
 
 	<!-- CSS -->
 	<link href="cr-demo.css" rel="stylesheet">
@@ -98,8 +98,8 @@
     </div>
 		
 	<div class="footer">
-		<a href="https://github.com/sanxofon/cr/" target="_blank">Claves Rítmicas v.2.52</a> - <a href="https://lengua.la">La Lengua</a>
-		<br>Esto no es un metrónomo, prueba con: <a href="https://lengua.la/mc/" target="_blank">mc</a> y <a href="https://lengua.la/metro/" target="_blank">metro</a>
+		<a href="https://github.com/sanxofon/cr/" target="_blank">Claves Rítmicas v.2.52</a> - <a href="https://lengua.tortilleria.org">La Lengua</a>
+		<br>Esto no es un metrónomo, prueba con: <a href="https://sanxofon.github.io/mc/" target="_blank">mc</a> y <a href="https://sanxofon.github.io/metro/" target="_blank">metro</a>
 	</div>
 	<!-- Settings -->
 	<div id="settings-button-container">
