--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Santiago Chávez Novaro">
 	<meta name="robots" content="index, follow">
 	<link rel="manifest" href="/cr/manifest.webmanifest">
-	<title>Claves Rítmicas v.2.7</title>
+	<title>Claves Rítmicas v.2.8</title>
 	<meta name="theme-color" content="#eeeeee" />
 	<!-- Allow web app to be run in full-screen mode. -->
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -61,16 +61,18 @@
 			<div class="inputLine1">
 				<input title="Ver Claves" class="escalar" type="checkbox" id="addClavesOperacion" name="addClavesOperacion" value="1" onchange="window.addClavesOperacion = this.checked; saveCheckboxState(this.id, this.checked); go();"><input title="Ingrese Claves y Operaciones" type="text" id="clave" placeholder="CLAVES" onchange="go();"><button class="toggle round-right" onclick="go();">✔</button>
 			</div>
+			<div class="inputLine" id="clavespostfix">
+			</div>
 			<div class="inputLine">
-				<input title="Ver Resultado" class="escalar" type="checkbox" id="addClaveResultado" name="addClaveResultado" value="1" onchange="window.addClaveResultado = this.checked; saveCheckboxState(this.id, this.checked); go();"><input title="Clave resultado" type="text" id="claveResult" placeholder="RESULTADO" readonly="readonly"><input title="Clave resultado expandida" type="text" id="claveExpand" value="" readonly="readonly" style="display:none;"><button onclick="toggleInputVisibility();" title="Toggle view" class="toggle smallt">_</button><button onclick="rotateClaveResult(-1);" title="Move Left" class="toggli smallt">&lAarr;</button><button onclick="rotateClaveResult(1);" title="Move Right" class="toggln smallt round-right">&rAarr;</button>
+				<input title="Ver Resultado" class="escalar" type="checkbox" id="addClaveResultado" name="addClaveResultado" value="1" onchange="window.addClaveResultado = this.checked; saveCheckboxState(this.id, this.checked); go();"><input title="Clave resultado" type="text" class="peque" id="claveResult" placeholder="RESULTADO" readonly="readonly"><input title="Clave resultado expandida" type="text" id="claveExpand" value="" readonly="readonly" style="display:none;"><button onclick="toggleInputVisibility();" title="Toggle view" class="toggle smallt">_</button><button onclick="rotateClaveResult(-1);" title="Move Left" class="toggli smallt">&lAarr;</button><button onclick="rotateClaveResult(1);" title="Move Right" class="toggln smallt round-right">&rAarr;</button>
 			</div>
 			<div class="inputLine">
 				<button id="playButton" class="playButton" onclick="togglePlay();">▶</button>
 				<input title="Velocidad o Tempo" type="range" id="tempoSlider" min="1" max="3000" step="1" oninput="updateTempo()">
 				<input title="Valor del Tempo" type="number" id="tempoValue" min="1" max="3000" step="1" onchange="updateTempoFromInput()">
-				<select id="tempoType">
-					<option value="cpm">CPM</option>
-					<option value="bpm">BPM</option>
+				<select title="Tipo de contador de velocidad" id="tempoType">
+					<option value="cpm" title="Claves por minuto">CPM</option>
+					<option value="bpm" title="Beats por minuto">BPM</option>
 				</select>
 			</div>
 			<div class="opciones">
@@ -95,8 +97,8 @@
     </div>
 		
 	<div class="footer">
-		<a href="https://github.com/sanxofon/cr/" target="_blank">Claves Rítmicas v.2.7</a> - <a href="https://lengua.tortilleria.org">La Lengua</a>
-		<br>Esto no es un metrónomo, prueba con: <a href="https://sanxofon.github.io/mc/" target="_blank">mc</a> y <a href="https://sanxofon.github.io/metro/" target="_blank">metro</a>
+		<a href="https://github.com/sanxofon/cr/" target="_blank" rel="noopener">Claves Rítmicas v.2.8</a> - <a href="https://lengua.tortilleria.org">La Lengua</a>
+		<br>Esto no es un metrónomo, prueba con: <a href="https://sanxofon.github.io/mc/" target="_blank" rel="noopener">mc</a> y <a href="https://sanxofon.github.io/metro/" target="_blank" rel="noopener">metro</a>
 	</div>
 	<!-- Settings -->
 	<div id="settings-button-container">
